proofs and types. also fix notation for algebra A vs. object A.

--- a/lambek-1980/lambek-main.tex
+++ b/lambek-1980/lambek-main.tex
@@ -101,9 +101,13 @@ bookmarksopenlevel=10,
 \def\BA{B \to A}
 \def\AB{A \to B}
 \def\calA{{\cal A}}
+\def\calB{{\cal B}}
 \def\cI{{I}}
 \def\cS{{S}}
 \def\cK{{K}}
+\def\cIA{\cI_{A}}
+\def\cKAB{\cK_{A,B}}
+\def\cSABC{\cS_{A,B,C}}
 \def\app{\mathop{{}^\wr}\kern-.8pt}
 \def\schon{Sch\"onfinkel}
 \newcommand{\be}{\begin{equation}}
@@ -156,7 +160,7 @@ file was created in March 2023.}}} \bigskip\bigskip
 Haskell Curry may be surprised to hear that he has spent a lifetime doing fundamental work
 in category theory. The purpose of this account is to convince categorists that Cartesian
 closed categories (Eilenberg and Kelly, 1966) have been anticipated by logicians (Curry,
-1930) by many years and, conversely, to per­ suade logicians that combinatory logic may
+1930) by many years and, conversely, to persuade logicians that combinatory logic may
 benefit from being phrased in categorical language.
 
 I have attempted to tell this story twice before (1972, 1974), but am not entirely
@@ -170,10 +174,10 @@ thereof to the construction of free toposes.
 
 Let me confess at once that I am not a historical scholar and that I have taken some
 liberties with the original material. Thus, I have taken the opportunity to present the
-early discov­eries of combinatory logic in the language of universal algebra.
+early discoveries of combinatory logic in the language of universal algebra.
 
-Our story begins in 1924, when \schon\ studied what would now be called an algebra $A =
-(|A|, \app, \cI, \cS, \cK)$ consisting of a set $|A|$ equipped with a binary operation
+Our story begins in 1924, when \schon\ studied what would now be called an algebra $\calA =
+(|\calA|, \app, \cI, \cS, \cK)$ consisting of a set $|\calA|$ equipped with a binary operation
 $\app$ and constants $\cI$, $\cS$ and $\cK$. These were to satisfy the following
 identities:
 \be
@@ -193,12 +197,12 @@ made a best guess about how to translate this into \LaTeX.}
 \renewcommand*{\thefootnote}{\arabic{footnote}}
 \setcounter{footnote}{0}
 \noindent
-for all elements $a$, $b$, $c$, $f$ and $g$ of $|A|$.
+for all elements $a$, $b$, $c$, $f$ and $g$ of $|\calA|$.
 Actually, \schon\ did not employ the language of universal algebra, and he defined $\cI$ in terms of $\cK$ and $\cS$, but of this we shall speak later. His main result would now be stated as follows.
 
 \pdfbookmark{Schonfinkel Algebra}{prop1}
 \begin{prop}
-Every polynomial $\varphi(x)$ over a \schon\ algebra $A$ can be written in the form $f \app x$, where $f \in |A|$.
+Every polynomial $\varphi(x)$ over a \schon\ algebra $A$ can be written in the form $f \app x$, where $f \in |\calA|$.
 \end{prop}
 \noindent
 Polynomials are of course formed as words in an indeterminate $x$ and are subject to the same three identities. 
@@ -221,12 +225,12 @@ and which satisfies
 \tag{$3_X$}
 \ees
 Alternatively, one may regard the polynomial $\varphi(x)$ as an element of the \schon\
-algebra $A[x]$, which comes equipped with an element $x$ and with a homomorphism $h_x :A
-\to A[x]$ with the usual universal property: for every algebra $B$ every homomorphism $f:
-A \to B$ and every element $b\in |B|$, there exists a unique homomorphism $f\pr : A[x] \to
-B$ such that $f\pr h_x = f$ and $f\pr (x) = b$. In the special case when $B = A$ and $f$
-is the identity homomorphism $A \to A$, $f\pr$ is the {\it substitution} homomorphism
-which allows us to replace $x$ in any polynomial by $b$. Similarly, when $B=A[x]$ and
+algebra $\calA[x]$, which comes equipped with an element $x$ and with a homomorphism $h_x : \calA
+\to \calA[x]$ with the usual universal property: for every algebra $B$ every homomorphism $f:
+\calA \to \calB$ and every element $b\in |\calB|$, there exists a unique homomorphism $f\pr : \calA[x] \to
+\calB$ such that $f\pr h_x = f$ and $f\pr (x) = b$. In the special case when $\calB = \calA$ and $f$
+is the identity homomorphism $\calA \to \calA$, $f\pr$ is the {\it substitution} homomorphism
+which allows us to replace $x$ in any polynomial by $b$. Similarly, when $\calB=\calA[x]$ and
 $f=h_x$, $f\pr$ allows us to replace $x$ by $a$ polynomial $\beta(x)$.
 
 The proof of Proposition 1 is remarkably simple. It proceeds by induction on the length of the word $\varphi(x)$,
@@ -249,7 +253,7 @@ $$
 In 1930, \schon's result was rediscovered by Curry. However, Curry was interested in imposing an
 additional requirement:
 \be
-\hbox{\rm If } f\app x \eqx g \app x \hbox{\rm\ in\ } A[x] \hbox{\rm\ then } f= g\hbox{\rm\ in\ } A. \tag{4}
+\hbox{\rm If } f\app x \eqx g \app x \hbox{\rm\ in\ } \calA[x] \hbox{\rm\ then } f= g\hbox{\rm\ in\ } \calA. \tag{4}
 \label{4}
 \ee
 For example, from
@@ -274,8 +278,8 @@ By a {\it Curry algebra} we shall mean a \schon\ algebra subject to certain addi
 equations or identities whose conjunction is equivalent to (4). Curry's result may then be
 formulated thus:
 \begin{prop}
-Over a Curry algebra $A$ every polynomial $\varphi(x)$ may be uniquely written in the form
-$f\app x$ with $f \in |A|$.
+Over a Curry algebra $\calA$ every polynomial $\varphi(x)$ may be uniquely written in the form
+$f\app x$ with $f \in |\calA|$.
 \end{prop}
 
 \noindent
@@ -388,7 +392,7 @@ are summed up as follows.
 \newpage
 
 \begin{prop}The identities and equations of Curry algebras imply and are implied by the following:%
-\footnote{Here $=$ denotes equality in $A$, $A[x]$, $A[x,y]$, etc. simultaneously,
+\footnote{Here $=$ denotes equality in $A$, $\calA[x]$, $\calA[x,y]$, etc. simultaneously,
 subscripts having been suppressed. It is an equivalence relation subject to the following rules:
 $$
 \inferrule{f=g \qquad a = b}{f\app a = g\app b} \,\, , \,\, \inferrule{\varphi(x) = \psi(x)}{\lx \varphi(x) = \lx \psi(x)}
@@ -405,8 +409,8 @@ $$
 The proof is almost straightforward. We shall only explain
 why (5) holds for Curry algebras. By Proposition 2, we have
 $f \app x \eqx \varphi(x)$ and we want to deduce from this that
-$f \app a =  \varphi(a)$. by the universal property of $A[x]$, there
-exists a unique homomorphism $h\pr: A[x] \to A$ such that
+$f \app a =  \varphi(a)$. by the universal property of $\calA[x]$, there
+exists a unique homomorphism $h\pr: \calA[x] \to \calA$ such that
 $h\pr = h_x$ and $h\pr(x) = a$. This is of course the substitution
 homomorphism which replaces $x$ by $a$, hence yields the required equation from
 $f \app x \eqx \varphi(x)$.
@@ -439,6 +443,7 @@ so $a$ cannot be a proposition. We must therefore distinguish between propositio
 and other entities; but even this distinction does not prevent
 Russell's paradox from raising its head (e.g. Curry and Feys, 1958).
 
+\pdfbookmark{Types and Proofs}{types}
 It is of course well-known that Russell's paradox may be
 avoided by introducing types. In the following exposition of
 typed combinatory logic I shall follow Curry and Feys
@@ -451,14 +456,107 @@ If $A$ and $B$ are types, so is $B^A$, the type of all "functions" from $A$ to $
 typographical reasons, we write $B \from A$ in place of $B^A$ . The
 binary operation symbol $\app$ may not be placed between entities indiscriminately,
 but is subject to the following rule:
-\bes
-\inferrule {a \in A \qquad f \in B \from A}{f \app a \in B}
-\tag{0}
-\ees
+\begin{enumerate}
+\item[(0)]$\qquad\inferrule {a \in A \qquad f \in B \from A}{f \app a \in B}$,
+\end{enumerate}
 meaning that, if $a$ is of type $A$ and $f$ of type $B \from A$ then
 $f\app a$ is of type $B$.%
 \footnote{Actually, the application symbol $\app$ should carry subscripts $A$ and $B$;
 but we omit these whenever they are clear from the context, as they are throughout this paper.}
+
+In place of the three constants $\cI$, $\cK$ and $\cS$ we adopt three families of constants:
+\begin{enumerate}
+\item[(1)]$\qquad \cIA \in A \from A$ such that $\cIA \app a = a$
+\item[(2)]$\qquad \cKAB \in (B \from A) \from A$ such that $(\cKAB\app a)\app b = a$
+\item[(3)]$\qquad \cSABC \in ((C \from A) \from (C \from B)) \from ((A \from B) \from C))$ such that
+$((\cSABC \app f) \app g) \app c = (f \app c) \app (g \app c).$
+\end{enumerate}
+It is assumed here that $a\in A$, $b \in B$, $c\in C$, $f \in (A \from B) \from C$ and $g \in B \from C$.
+
+A many-sorted algebra of the kind constructed above
+may be called a {\it typed \schon\ algebra}, or a {\it typed Curry algebra} if the appropriate
+equations are postulated.
+
+Curry and Feys have pointed out that, if $\from$ is read as ``if'',
+the types of $\cIA$, $\cKAB$, and $\cSABC$ are precisely the axioms of the
+intuitionist implicational calculus, while (0) bears an obvious relation to
+the usual rule of modus ponens.
+
+Two remarks are in order. The same axioms also appear in the classical
+propositional calculus accompanied by an additional axiom involving negation.
+Nonetheless, the negationless formula $A \from (A \from (B \from A))$ is a
+theorem classically but not in the system without negation.
+This is why we call the present system intuitionistic.
+
+Secondly, it should be pointed out that $A \from A$ is usually not
+taken as an axiom, but is deduced from the other two axioms. Nevertheless,
+we prefer to regard it as an axiom here.
+
+Implicit in the the definition of a typed \schon\ algebra
+is a way of regarding each entity of type $A$ as a proof of the
+formula $A$.
+
+For example, $\cS_{A,B,A}$ is by definition a proof of the axiom
+$((A \from A)\from(B<=A))\from((A\from B)\from A)$
+and $\cKAB$ is by definition a proof of the axiom $(A \from B) \from A$.
+Hence $\cS_{A,B,A} \app \cKAB$ is a proof of the theorem $(A\from A) \from (B\from A)$
+by modus ponens. Again, $\cK_{A,C}$ is a proof of the axiom
+$(A \from C) \from A$. Take $B = (A \from C)$
+then $(\cS_{A,B,A}\app \cKAB)\app \cK_{A,C}$ is a proof of the theorem $A \from A$.
+Since we regard $A\from A$ as axiom, another proof is $\cIA$. Incidentally,
+we see here that the derivation of $A \from A$ the other axioms of the
+implicational calculus is nothing else then \schon's
+definition of $\cI$ as $(\cS \app \cK)\app \cK$.
+
+The association of entities with proofs becomes even more
+striking when we compare the free typed \schon\ algebra
+(generated by a set of letters) with pure
+intuitionistic implicational logic. Then
+$$
+\hbox{\rm\ combinators } = \hbox{\rm\ proofs.}
+$$
+The reader should note that throughout we distinguish between an axiom
+such as $(A \from B) \from A$ and its proof $\cKAB$, a pedantic but necessary
+distinction.
+
+Let us now look at Proposition 1 for typed \schon\ algebras. The reader will easily
+convince himself that the proposition and its proof remain valid, provided $x$
+is an indeterminate of type $A$, where $A$ is any type of $\calA$.
+It asserts that, if $\varphi(x)$ is a polynomial of type $B$ in the indeterminate $x$
+of type $A$, then there is a constant $f$ of type
+$B \from A$ such that $\varphi(x) \eqx f \app x$.
+
+
+In the proof-theoretic interpretation we should regard $x$ as an assumption
+that $A$ holds. Proposition 1 then becomes the usual deduction theorem with an
+extra punch at the end: if $\varphi(x)$ is a proof of $B$ from the assumption $x$
+that $A$ holds, then there is a proof of $B \from A$ without any assumption such
+that $\varphi(x) \eqx f \app x$.
+
+The extra bit at the end asserts the ``equality'' of two proofs.
+Perhaps it would have been better to speak only of ``equivalence'' of proofs.
+
+
+As far as I know, this association between combinators and proofs is due to Curry and Feys (1958).
+It was developed further by Howard (see Stenlund, 1972) and the author (1969, 1972).%
+\footnote{For related ideas and further references see also the thought provoking paper by Scott (1970).}%
+
+Proposition 2 will also remain valid for typed Curry algebras.
+It asserts that the proof $f$ of $B \from A$, whose existence has
+been established in Proposition 1, is unique up to equivalence of
+proofs (which we called equality here).
+
+Proposition 3 will remain valid for typed Curry algebras
+provided we use the typed $\lambda$-calculus and write
+$f = \lambda_{x \in A} \varphi(x)$.
+
+Proposition 4 will not remain valid for typed Curry algebras without
+very strong restrictions. After all, the whole purpose of introducing types was
+to render expressions such as $b \app b$ meaningless in general. If $b \in B$, it does have
+a meaning only if $B = B \from B$. Proposition 4 remains valid for typed algebras in the
+following sense: if $A$ is a type such that $A \from A = A$, then every entity $f$ of type $A$
+has a fixpoint a such that $f\app a= a$.
+
 \begin{thebibliography}{888}
 
 
