--- a/lambek-1980/lambek-main.tex
+++ b/lambek-1980/lambek-main.tex
@@ -96,7 +96,6 @@ bookmarksopenlevel=10,
 \def\ss{(**)}
 \def\ssn{(**_n)}
 \def\scop{\S^{\C^{op}}}
-\def\pr{^\prime}
 \def\sland{\mathrel{\scriptstyle \land}}
 \def\PU{\mathcal P U}
 \def\P{\mathcal P}
@@ -230,11 +229,11 @@ and which satisfies
 Alternatively, one may regard the polynomial $\varphi(x)$ as an element of the \schon\
 algebra $\calA[x]$, which comes equipped with an element $x$ and with a homomorphism $h_x : \calA
 \to \calA[x]$ with the usual universal property: for every algebra $B$ every homomorphism $f:
-\calA \to \calB$ and every element $b\in |\calB|$, there exists a unique homomorphism $f\pr : \calA[x] \to
-\calB$ such that $f\pr h_x = f$ and $f\pr (x) = b$. In the special case when $\calB = \calA$ and $f$
-is the identity homomorphism $\calA \to \calA$, $f\pr$ is the {\it substitution} homomorphism
+\calA \to \calB$ and every element $b\in |\calB|$, there exists a unique homomorphism $f' : \calA[x] \to
+\calB$ such that $f' h_x = f$ and $f' (x) = b$. In the special case when $\calB = \calA$ and $f$
+is the identity homomorphism $\calA \to \calA$, $f'$ is the {\it substitution} homomorphism
 which allows us to replace $x$ in any polynomial by $b$. Similarly, when $\calB=\calA[x]$ and
-$f=h_x$, $f\pr$ allows us to replace $x$ by $a$ polynomial $\beta(x)$.
+$f=h_x$, $f'$ allows us to replace $x$ by $a$ polynomial $\beta(x)$.
 
 The proof of Proposition 1 is remarkably simple. It proceeds by induction on the length of the word $\varphi(x)$,
 which must be either $x$, or a constant or of the form $\psi(x)\app \chi(x)$ not constant,
@@ -413,8 +412,8 @@ The proof is almost straightforward. We shall only explain
 why (5) holds for Curry algebras. By Proposition 2, we have
 $f \app x \eqx \varphi(x)$ and we want to deduce from this that
 $f \app a =  \varphi(a)$. By the universal property of $\calA[x]$, there
-exists a unique homomorphism $h\pr: \calA[x] \to \calA$ such that
-$h\pr = h_x$ and $h\pr(x) = a$. This is of course the substitution
+exists a unique homomorphism $h': \calA[x] \to \calA$ such that
+$h' = h_x$ and $h'(x) = a$. This is of course the substitution
 homomorphism which replaces $x$ by $a$, hence yields the required equation from
 $f \app x \eqx \varphi(x)$.
 
@@ -459,16 +458,17 @@ If $A$ and $B$ are types, so is $B^A$, the type of all "functions" from $A$ to $
 typographical reasons, we write $B \from A$ in place of $B^A$ . The
 binary operation symbol $\app$ may not be placed between entities indiscriminately,
 but is subject to the following rule:
-\begin{enumerate}
-\item[(0)]$\qquad\inferrule {a \in A \qquad f \in B \from A}{f \app a \in B}$,
-\end{enumerate}
+\bes
+\inferrule {a \in A \qquad f \in B \from A}{f \app a \in B},
+\tag{0}
+\ees
 meaning that, if $a$ is of type $A$ and $f$ of type $B \from A$ then
 $f\app a$ is of type $B$.%
 \footnote{Actually, the application symbol $\app$ should carry subscripts $A$ and $B$;
 but we omit these whenever they are clear from the context, as they are throughout this paper.}
 
 In place of the three constants $\cI$, $\cK$ and $\cS$ we adopt three families of constants:
-\begin{enumerate}
+\begin{enumerate}[align=left]
 \item[(1)]$\qquad \cIA \in A \from A$ such that $\cIA \app a = a$
 \item[(2)]$\qquad \cKAB \in (B \from A) \from A$ such that $(\cKAB\app a)\app b = a$
 \item[(3)]$\qquad \cSABC \in ((C \from A) \from (C \from B)) \from ((A \from B) \from C))$ such that
@@ -576,7 +576,7 @@ A \xto{0_A} \top;
 \tag{2}
 \ees
 \bes
-A \sland B \xto{\pi_{A,B}} A,\,\,A \sland B \xto{\pi\pr_{A,B}} B, \quad
+A \sland B \xto{\pi_{A,B}} A,\,\,A \sland B \xto{\pi'_{A,B}} B, \quad
 \inferrule{C \xto{f} A\qquad C \xto{g} B}{C \xto{\langle f, g\rangle} A \sland B}
 \tag{3}
 \ees
@@ -586,9 +586,9 @@ A \sland B \xto{\pi_{A,B}} A,\,\,A \sland B \xto{\pi\pr_{A,B}} B, \quad
 \ees
 The labels are useful in naming proofs. For example, the commutative law is proved thus:
 $$
-\inferrule{A \sland B \xto{\pi\pr_{A,B}} B\quad A \sland B \xto{\pi_{A,B}} A}{A \sland B \xto{\langle \pi\pr_{A,B},\pi_{A,B}\rangle} B\sland A}
+\inferrule{A \sland B \xto{\pi'_{A,B}} B\quad A \sland B \xto{\pi_{A,B}} A}{A \sland B \xto{\langle \pi'_{A,B},\pi_{A,B}\rangle} B\sland A}
 $$
-The label $\langle \pi\pr_{A,B},\pi_{A,B}\rangle$ appearing in the last line may be used
+The label $\langle \pi'_{A,B},\pi_{A,B}\rangle$ appearing in the last line may be used
 to denote the whole proof.
 
 We are also interested in an equivalence relation between proofs,
@@ -596,6 +596,77 @@ which we may as well denote by the equality symbol $=$. We do not bother to
 write down the usual reflexive, symmetric, transitive and substitution laws for
 equality. However, we list the following equations, where in $f = g$ it is
 assumed that $f$ and $g$ have the same source and target.
+\begin{enumerate}[align=left]
+\item[($1'$)]$f1_A = f$, $1_Bf = f$, $(hg)f = g(hf)$,
+ for all $f:A \to B$, $g:B \to C$, and $h: C\to D$;
+\item[($2'$)] $f= 0_a$, for all $f: A \to 1$;
+\item[($3'$)] $\pi_{A,B}\langle f,g \rangle = f$, $\pi'_{A,B}\langle f,g \rangle = g$,
+$\langle\pi_{A,B} h, \pi'_{A,B} h\rangle = h$, for all $f:C \to A$, $g:C \to B$, and $h: C\to A\sland B$;
+\item[($4'$)] $\eval_{A,B}\langle h^*\pi_{C,B}, \pi'_{C,B}\rangle = h$,
+$(\eval_{A,B}\langle k^*\pi_{C,B}, \pi'_{C,B}\rangle)^* = k$,
+for all $h: C\sland A \to A$, and $k: C \to A \from B$.
+\end{enumerate}
+\pdfbookmark{Cartesian closed categories}{ccc}
+The reader will recognize that (1) and ($1'$) define a category.
+Moreover, (2) and ($2'$) assert that $\top$
+is a terminal object, usually denoted by $1$.
+Furthermore, (3) and ($3'$) assert that $A \sland B$ is the Cartesian product
+of A and B, usually written $A \times B$.
+Finally, (4) and ($4'$) express the fact that $(-) \from B$ is right adjoint to
+$(-) \sland B: \calA \to \calA$ , which makes $\from$ an internal hom-functor, the
+usual notation for $A \from B$ being $A^B$.
+(1) to (3) and ($1'$) to ($3'$) define a Cartesian category,
+(1) to (4) and ($1'$) to ($4'$) define a Cartesian closed category.
+
+Cartesian closed categories were introduced under this name
+by Eilenberg and Kelly (1966). Lawvere (1969) also pointed out that $\times$
+is right adjoint to the diagonal $\calA \to \calA \times \calA$ and emphasized the analogy
+with propositional logic. Our definition of Cartesian closed categories is slightly different,
+in as much as $1$, $\times$, and exponentiation are not only said to exist, but are regarded
+as part of the structure. In fact, our notion of Cartesian closed category is algebraic over
+the category of categories, or the category of graphs for that matter, in much the same way
+that the notion of group is algebraic over the category of sets.
+
+For future reference, we also note the following consequence of conditions ($1'$) to ($4'$):
+\bes
+\langle f,g\rangle h = \langle fh,gh \rangle .
+\tag{$5'$}
+\ees
+This is proved thus: let $k = \langle f,g\rangle h$, then, omitting subscripts, we have
+$$
+\pi k=fh, \pi' k=gh
+$$
+by (3) and hence
+$$
+\langle fh,gh \rangle = \langle \pi k,\pi' k\rangle = k,
+$$
+by ($3'$) again.
+
+In the author's opinion, it is a tour de force to present
+propositional logic without conjunction. Curiously, the same tour de force
+is found in the paper by Eilenberg and Kelly, who
+went to some trouble to eliminate the Cartesian product from Cartesian closed categories.
+One could argue that closed cate­ gories without products are essentially the same
+as typed Curry algebras. It therefore seems reasonable to proceed
+from the study of typed Curry algebras to the study of Cartesian closed categories.
+
+I had proved in 1972 that functional completeness holds for Cartesian closed categories,
+provided that these satisfied a finite set of equations, like those due to Curry,
+and conjec­tured that these equations are already a consequence of ($1'$) to ($4'$) above,
+that is, they hold in any Cartesian closed category. I proved this later (1974)
+and shall give another exposition of the proof here. The new versions of Propositions
+1 and 2 will be called Theorems 1 and 2.
+
+\pdfbookmark{Deduction Theorem}{deduction}
+First, we must explain what it means to adjoin an indeterminate morphism $x: 1 \to A$
+to a Cartesian closed category $\calA$ with A being an object of $\calA$, which we also
+regard as a formula. In the same spirit, we may regard $x$ as an assumption that $\top$ entails $A$.
+The objects of $\calA[x]$ are the same as those of $\calA$ , but the morphisms
+$\varphi(x): B \to C$ in $\calA[x]$ may be regarded as proofs that $B$ entails $C$ on
+the assumption $x$. Equality between proofs or polynomials is determined by ($1'$) to($4'$) and is
+denoted by $\eqx$. One must check of course that $\calA[x]$ thus constructed has 
+the expected universal property.
+
 
 \begin{thebibliography}{888}
 
