--- a/lambek-1980/lambek-main.tex
+++ b/lambek-1980/lambek-main.tex
@@ -110,6 +110,9 @@ bookmarksopenlevel=10,
 \def\cIA{\cI_{A}}
 \def\cKAB{\cK_{A,B}}
 \def\cSABC{\cS_{A,B,C}}
+\def\la{\langle}
+\def\ra{\rangle}
+\def\bracket#1{\la #1 \ra}
 \def\app{\mathop{{}^\wr}\kern-.8pt}
 \def\schon{Sch\"onfinkel}
 \newcommand{\be}{\begin{equation}}
@@ -577,7 +580,7 @@ A \xto{0_A} \top;
 \ees
 \bes
 A \sland B \xto{\pi_{A,B}} A,\,\,A \sland B \xto{\pi'_{A,B}} B, \quad
-\inferrule{C \xto{f} A\qquad C \xto{g} B}{C \xto{\langle f, g\rangle} A \sland B}
+\inferrule{C \xto{f} A\qquad C \xto{g} B}{C \xto{\la f, g\ra} A \sland B}
 \tag{3}
 \ees
 \bes
@@ -586,9 +589,9 @@ A \sland B \xto{\pi_{A,B}} A,\,\,A \sland B \xto{\pi'_{A,B}} B, \quad
 \ees
 The labels are useful in naming proofs. For example, the commutative law is proved thus:
 $$
-\inferrule{A \sland B \xto{\pi'_{A,B}} B\quad A \sland B \xto{\pi_{A,B}} A}{A \sland B \xto{\langle \pi'_{A,B},\pi_{A,B}\rangle} B\sland A}
+\inferrule{A \sland B \xto{\pi'_{A,B}} B\quad A \sland B \xto{\pi_{A,B}} A}{A \sland B \xto{\la \pi'_{A,B},\pi_{A,B}\ra} B\sland A}
 $$
-The label $\langle \pi'_{A,B},\pi_{A,B}\rangle$ appearing in the last line may be used
+The label $\la \pi'_{A,B},\pi_{A,B}\ra$ appearing in the last line may be used
 to denote the whole proof.
 
 We are also interested in an equivalence relation between proofs,
@@ -599,11 +602,11 @@ assumed that $f$ and $g$ have the same source and target.
 \begin{enumerate}[align=left]
 \item[($1'$)]$f1_A = f$, $1_Bf = f$, $(hg)f = g(hf)$,
  for all $f:A \to B$, $g:B \to C$, and $h: C\to D$;
-\item[($2'$)] $f= 0_a$, for all $f: A \to 1$;
-\item[($3'$)] $\pi_{A,B}\langle f,g \rangle = f$, $\pi'_{A,B}\langle f,g \rangle = g$,
-$\langle\pi_{A,B} h, \pi'_{A,B} h\rangle = h$, for all $f:C \to A$, $g:C \to B$, and $h: C\to A\sland B$;
-\item[($4'$)] $\eval_{A,B}\langle h^*\pi_{C,B}, \pi'_{C,B}\rangle = h$,
-$(\eval_{A,B}\langle k^*\pi_{C,B}, \pi'_{C,B}\rangle)^* = k$,
+\item[($2'$)] $f= 0_A$, for all $f: A \to 1$;
+\item[($3'$)] $\pi_{A,B}\la f,g \ra = f$, $\pi'_{A,B}\la f,g \ra = g$,
+$\la\pi_{A,B} h, \pi'_{A,B} h\ra = h$, for all $f:C \to A$, $g:C \to B$, and $h: C\to A\sland B$;
+\item[($4'$)] $\eval_{A,B}\la h^*\pi_{C,B}, \pi'_{C,B}\ra = h$,
+$(\eval_{A,B}\la k^*\pi_{C,B}, \pi'_{C,B}\ra)^* = k$,
 for all $h: C\sland A \to A$, and $k: C \to A \from B$.
 \end{enumerate}
 \pdfbookmark{Cartesian closed categories}{ccc}
@@ -629,16 +632,16 @@ that the notion of group is algebraic over the category of sets.
 
 For future reference, we also note the following consequence of conditions ($1'$) to ($4'$):
 \bes
-\langle f,g\rangle h = \langle fh,gh \rangle .
+\la f,g\ra h = \la fh,gh \ra .
 \tag{$5'$}
 \ees
-This is proved thus: let $k = \langle f,g\rangle h$, then, omitting subscripts, we have
+This is proved thus: let $k = \la f,g\ra h$, then, omitting subscripts, we have
 $$
 \pi k=fh, \pi' k=gh
 $$
 by (3) and hence
 $$
-\langle fh,gh \rangle = \langle \pi k,\pi' k\rangle = k,
+\la fh,gh \ra = \la \pi k,\pi' k\ra = k,
 $$
 by ($3'$) again.
 
@@ -666,6 +669,50 @@ $\varphi(x): B \to C$ in $\calA[x]$ may be regarded as proofs that $B$ entails $
 the assumption $x$. Equality between proofs or polynomials is determined by ($1'$) to($4'$) and is
 denoted by $\eqx$. One must check of course that $\calA[x]$ thus constructed has 
 the expected universal property.
+
+\begin{theorem}[Deduction theorem] With every proof $\varphi(x): B \to C$ from the
+assumption $x: 1 \to A$ there is associated a proof $f: A \sland B \to C$ not depending
+on this assumption. Moreover $f\la x0_B, 1_B \ra \eqx \varphi(x)$.
+
+\end{theorem}
+
+It should be pointed out that we have presented the positive
+intuitionist propositional calculus as a deductive system, so
+that the usual deduction theorem becomes absorbed in the rules governing
+the deduction symbol $\to$, thus:
+$$
+\inferrule{A \sland B \to C}{A \to C \from B}
+$$
+However, at a higher level the horizontal bar functions as a deduction symbol and
+Theorem 1 plays the role of a new deduction theorem.
+\begin{proof}
+Clearly, every polynomial $\varphi(x)$ must have one of the five forms:
+$k$, $x$, $\la \psi(x), \chi(x) \ra$, $\chi(x)\psi(x)$, or $\psi(x)^*$, where $k$
+is constant and where $\psi(x)$ and $\chi(x)$ are shorter polynomials.
+By inductional assumption we have, omitting subscripts:
+$$
+\psi(x) \eqx g\la x0,l\ra, \chi(x) \eqx h\la x0,l \ra.
+$$
+The result now follows by verifying the following equations:
+\begin{align*}
+k \pi'_{A,B} \bracket{x0_B, 1_B} &\eqx k, \\
+\pi_{A,1}\bracket{x0_1,1_1} &\eqx x,\\
+\bracket{g,h}\bracket{x0_B, 1_B} &\eqx \bracket{\psi(x),\chi(x)},\\
+h\bracket{\pi_{A,B},g}\bracket{x0_B,1_B} &\eqx \chi(x)\psi(x),\\
+(g\alpha_{A,B,D})^*\bracket{x0_B,1_B} &\eqx \psi(x)^*,
+\end{align*}
+where $\alpha_{A,B,D}:(A \sland B)\land D \to A\sland(B \sland D)$ is given by
+$$
+\alpha_{A,B,D} = \bracket{\pi_{A,B},\pi_{A\,\sland\, B,D}\, , \bracket{\pi'_{A,B}\pi_{A\,\sland\, B,D}\,,
+\pi'_{A\,\sland\, B,D}}}
+$$
+The last equation is proved by showing (omitting subscripts)
+that:
+$$
+\eval\bracket{(g\alpha)^*\bracket{x0,1}\pi,\pi'} \eqx g\bracket{x0,1}
+$$
+which follows from a routine calculation, as in (Lambek 1974, p. 272).
+\end{proof}
 
 
 \begin{thebibliography}{888}
