use matha symbols for a few things.
also use \vDash for ||- instead of the terrible hack we had before.

--- a/lambek-1980/lambek-main.tex
+++ b/lambek-1980/lambek-main.tex
@@ -28,6 +28,9 @@
 \input{../helpers/cmrsum}
 \input{../helpers/fix-underbrace.tex}
 
+% some nicer symbols
+\input{../helpers/matha-symbols.tex}
+
 \usepackage[small]{titlesec}
 \usepackage{cite}
 
@@ -37,7 +40,6 @@
 
 \newtheorem{theorem}{Theorem}
 \newtheorem{prop}[theorem]{Proposition}
-
 
 \usepackage[colorlinks=true
 ,breaklinks=true
@@ -55,6 +57,7 @@ bookmarksopenlevel=10,
 }
 
 \date{}
+\def\mm{\Vdash}
 \def\to{\longrightarrow}
 \def\xto#1{\xrightarrow{\kern.6em #1 \kern.6em}}
 \def\ent{\longrightarrow}
@@ -82,7 +85,6 @@ bookmarksopenlevel=10,
 \def\lu{\lambda_u}
 \def\lv{\lambda_v}
 \def\lz{\lambda_z}
-\def\eval{\varepsilon}
 \def\lm#1.#2{\lambda#1.\, #2}
 \def\br#1{[\, #1 \, ]}
 \def\V{V}
@@ -96,7 +98,7 @@ bookmarksopenlevel=10,
 \def\ss{(**)}
 \def\ssn{(**_n)}
 \def\scop{\S^{\C^{op}}}
-\def\sland{\mathrel{\scriptstyle \land}}
+\def\sland{\wedge}
 \def\PU{\mathcal P U}
 \def\P{\mathcal P}
 \def\UU{(U\to U)}
@@ -584,7 +586,7 @@ A \sland B \xto{\pi_{A,B}} A,\,\,A \sland B \xto{\pi'_{A,B}} B, \quad
 \tag{3}
 \ees
 \bes
-(A\from B) \sland B \xto{\eval_{A,B}} A, \qquad \inferrule{C\sland B \xto{h} A}{C \xto{h^*} (A \from B)}
+(A\from B) \sland B \xto{\ev_{A,B}} A, \qquad \inferrule{C\sland B \xto{h} A}{C \xto{h^*} (A \from B)}
 \tag{4}
 \ees
 The labels are useful in naming proofs. For example, the commutative law is proved thus:
@@ -605,8 +607,8 @@ assumed that $f$ and $g$ have the same source and target.
 \item[($2'$)] $f= 0_A$, for all $f: A \to 1$;
 \item[($3'$)] $\pi_{A,B}\la f,g \ra = f$, $\pi'_{A,B}\la f,g \ra = g$,
 $\la\pi_{A,B} h, \pi'_{A,B} h\ra = h$, for all $f:C \to A$, $g:C \to B$, and $h: C\to A\sland B$;
-\item[($4'$)] $\eval_{A,B}\la h^*\pi_{C,B}, \pi'_{C,B}\ra = h$,
-$(\eval_{A,B}\la k^*\pi_{C,B}, \pi'_{C,B}\ra)^* = k$,
+\item[($4'$)] $\ev_{A,B}\la h^*\pi_{C,B}, \pi'_{C,B}\ra = h$,
+$(\ev_{A,B}\la k^*\pi_{C,B}, \pi'_{C,B}\ra)^* = k$,
 for all $h: C\sland A \to A$, and $k: C \to A \from B$.
 \end{enumerate}
 \pdfbookmark{Cartesian closed categories}{ccc}
@@ -709,7 +711,7 @@ $$
 The last equation is proved by showing (omitting subscripts)
 that:
 $$
-\eval\bracket{(g\alpha)^*\bracket{x0,1}\pi,\pi'} \eqx g\bracket{x0,1}
+\ev\bracket{(g\alpha)^*\bracket{x0,1}\pi,\pi'} \eqx g\bracket{x0,1}
 $$
 which follows from a routine calculation, as in (Lambek 1974, p. 272).
 \end{proof}
