--- a/lambek-1980/lambek-main.tex
+++ b/lambek-1980/lambek-main.tex
@@ -716,6 +716,11 @@ $$
 which follows from a routine calculation, as in (Lambek 1974, p. 272).
 \end{proof}
 
+\pdfbookmark{Functional Functional}{completeness}
+\begin{theorem}[Functional Functional of Cartesian closed categories]
+For every polynomial $\varphi(x):B \to C$ in an indeterminate $x: 1 \to A$
+there is a unique constant $f: A \times B \to C$ such that $f\bracket{x0_B,l_B} = \varphi(x)$.
+\end{theorem}
 
 \begin{thebibliography}{888}
 
