fix pi notations

--- a/lambek-1980/lambek-main.tex
+++ b/lambek-1980/lambek-main.tex
@@ -59,8 +59,8 @@ bookmarksopenlevel=10,
 \date{}
 \def\mm{\Vdash}
 \def\kxa{\kappa_{x \in A}}
-\def\pAB{\pi_{A,B}}
-\def\ppAB{\pi'_{A,B}}
+\def\prAB{\pi_{A,B}}
+\def\prpAB{\pi'_{A,B}}
 \def\pr#1{\pi_{#1}}
 \def\prp#1{\pi'_{#1}}
 \def\to{\longrightarrow}
@@ -586,7 +586,7 @@ A \xto{0_A} \top;
 \tag{2}
 \ees
 \bes
-A \sland B \xto{\pAB} A,\,\,A \sland B \xto{\ppAB} B, \quad
+A \sland B \xto{\prAB} A,\,\,A \sland B \xto{\prpAB} B, \quad
 \inferrule{C \xto{f} A\qquad C \xto{g} B}{C \xto{\la f, g\ra} A \sland B}
 \tag{3}
 \ees
@@ -596,9 +596,9 @@ A \sland B \xto{\pAB} A,\,\,A \sland B \xto{\ppAB} B, \quad
 \ees
 The labels are useful in naming proofs. For example, the commutative law is proved thus:
 $$
-\inferrule{A \sland B \xto{\ppAB} B\quad A \sland B \xto{\pAB} A}{A \sland B \xto{\la \ppAB,\pAB\ra} B\sland A}
+\inferrule{A \sland B \xto{\prpAB} B\quad A \sland B \xto{\prAB} A}{A \sland B \xto{\la \prpAB,\prAB\ra} B\sland A}
 $$
-The label $\la \ppAB,\pAB\ra$ appearing in the last line may be used
+The label $\la \prpAB,\prAB\ra$ appearing in the last line may be used
 to denote the whole proof.
 
 We are also interested in an equivalence relation between proofs,
@@ -610,8 +610,8 @@ assumed that $f$ and $g$ have the same source and target.
 \item[($1'$)]$f1_A = f$, $1_Bf = f$, $(hg)f = g(hf)$,
  for all $f:A \to B$, $g:B \to C$, and $h: C\to D$;
 \item[($2'$)] $f= 0_A$, for all $f: A \to 1$;
-\item[($3'$)] $\pAB\la f,g \ra = f$, $\ppAB\la f,g \ra = g$,
-$\la\pAB h, \ppAB h\ra = h$, for all $f:C \to A$, $g:C \to B$, and $h: C\to A\sland B$;
+\item[($3'$)] $\prAB\la f,g \ra = f$, $\prpAB\la f,g \ra = g$,
+$\la\prAB h, \prpAB h\ra = h$, for all $f:C \to A$, $g:C \to B$, and $h: C\to A\sland B$;
 \item[($4'$)] $\ev_{A,B}\la h^*\pr{C,B}, \prp{C,B}\ra = h$,
 $(\ev_{A,B}\la k^*\pr{C,B}, \prp{C,B}\ra)^* = k$,
 for all $h: C\sland A \to A$, and $k: C \to A \from B$.
@@ -702,15 +702,15 @@ $$
 $$
 The result now follows by verifying the following equations:
 \begin{align*}
-k \ppAB \bracket{x0_B, 1_B} &\eqx k, \\
+k \prpAB \bracket{x0_B, 1_B} &\eqx k, \\
 \pr{A,1}\bracket{x0_1,1_1} &\eqx x,\\
 \bracket{g,h}\bracket{x0_B, 1_B} &\eqx \bracket{\psi(x),\chi(x)},\\
-h\bracket{\pAB,g}\bracket{x0_B,1_B} &\eqx \chi(x)\psi(x),\\
+h\bracket{\prAB,g}\bracket{x0_B,1_B} &\eqx \chi(x)\psi(x),\\
 (g\alpha_{A,B,D})^*\bracket{x0_B,1_B} &\eqx \psi(x)^*,
 \end{align*}
 where $\alpha_{A,B,D}:(A \sland B)\land D \to A\sland(B \sland D)$ is given by
 $$
-\alpha_{A,B,D} = \bracket{\pAB,\pr{A\sland B,D}\, , \bracket{\ppAB\pr{A\,\sland B,D}\,,
+\alpha_{A,B,D} = \bracket{\prAB,\pr{A\sland B,D}\, , \bracket{\prpAB\pr{A\,\sland B,D}\,,
 \prp{A\sland B,D}}}
 $$
 The last equation is proved by showing (omitting subscripts)
@@ -729,6 +729,14 @@ there is a unique constant $f: A \times B \to C$ such that $f\bracket{x0_B,l_B} 
 \begin{proof}
 Let us write $\kxa \varphi(x)$ for the constant $f$ which is assigned to the proof $\varphi(x)$
 in the proof of Theorem 1. Thus, when $k$ is a constant, we have:
+\begin{align*}
+\kxa k &= k\prpAB \tag{i}\\
+\kxa x &= k\pr{A,1} \tag{ii}\\
+\kxa \bracket{\psi(x),\chi(x)} &= \bracket{\kxa\psi(x),\kxa\chi(x)} \tag{iii}\\
+\kxa k &= k\prpAB \tag{iv}\\
+\kxa k &= k\prpAB \tag{v}\\
+\end{align*}
+
 \end{proof}
 \begin{thebibliography}{888}
 
