--- a/lambek-1980/lambek-main.tex
+++ b/lambek-1980/lambek-main.tex
@@ -374,7 +374,7 @@ We shall not bother to spell them out.
 
 We now turn to the uniqueness of $f$ in Proposition 2.
 Suppose also $g\app x \eqx \varphi(x)$, we claim that $g = \lx \varphi(x)$.
-Now, by (*) $\lx (g\app x) = \lx \varphi(x)$, so it suffices to
+Now, by (*), $\lx (g\app x) = \lx \varphi(x)$, so it suffices to
 prove that $\lx (g\app x) = g$.
 
 Now a small calculation shows that $\lx (g\app x) = (\cS\app(\cK \app g))\app \cI$,
@@ -716,7 +716,7 @@ However, at a higher level the horizontal bar functions as a deduction symbol an
 Theorem 1 plays the role of a new deduction theorem.
 \begin{proof}
 Clearly, every polynomial $\varphi(x)$ must have one of the five forms:
-$k$, $x$, $\bracket{\psi(x), \chi(x)}$, $\chi(x)\psi(x)$, or $\psi(x)^*$, where $k$
+$k$, $x$, $\bracket{\psi(x), \chi(x)}$, $\chi(x)\psi(x)$, and $\psi(x)^*$, where $k$
 is constant and where $\psi(x)$ and $\chi(x)$ are shorter polynomials.
 By inductional assumption we have, omitting subscripts:
 $$
@@ -744,9 +744,9 @@ which follows from a routine calculation, as in (Lambek 1974, p. 272).
 \end{proof}
 
 \pdfbookmark{Functional}{completeness}
-\begin{theorem}[Functional Completeness of Cartesian closed categories]
+\begin{theorem}[Functional completeness of Cartesian closed categories]
 For every polynomial $\varphi(x):B \to C$ in an indeterminate $x: 1 \to A$
-there is a unique constant $f: A \times B \to C$ such that $f\bracket{x0_B,l_B} = \varphi(x)$.
+there is a unique constant $f: A \times B \to C$ such that $f\bracket{x0_B,1_B} = \varphi(x)$.
 \end{theorem}
 \begin{proof}
 Let us write $\kxa \varphi(x)$ for the constant $f$ which is assigned to the proof $\varphi(x)$
